Fix `NiCad`-related CodeQL issue (#67)